# xyz-dashboard

./: .gitignore  LICENSE  README.md  docs.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/icon-packs/: index.json
assets/icon-packs/packs/apps-brands/: pack.json
assets/icon-packs/packs/dev-tools/: pack.json
assets/icon-packs/packs/media-social/: pack.json
assets/icon-packs/packs/system-controls/: pack.json
packaging/: com.cloud-xyz.xyz-dashboard.metainfo.xml  store-listing.md
src/: App.tsx  bootSplash.ts  i18n.ts  iconCatalog.test.ts  iconCatalog.ts  iconLibrary.pack.test.ts  iconLibrary.tsx  index.css  main.tsx  store.ts  themePresets.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/audio/: sfx.ts
src/components/: ErrorOverlay.tsx  GridButton.tsx  GridControls.tsx  MacroGrid.tsx  SettingsIcon.tsx  SettingsPanel.tsx
src/hooks/: useDragSnap.ts  useInactivityTimer.ts  useResolvedPackIcon.ts  useWindowDrag.ts
src/utils/: fileImageSrc.ts
