[package]
name = "xyz-dashboard"
version = "0.1.2"
description = "Floating macro-pad launcher for commands and URLs (Rainbow Technology)."
authors = ["Rainbow Technology"]
edition = "2021"
license = "MIT"

[lib]
name = "xyz_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "devtools", "protocol-asset"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
shell-words = "1.1.1"
